Make global CSS File

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="images/favicon.png" />
   
   <title>Contact Us</title>
-  <link rel="stylesheet" href="contactc.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
