--- a/home.html
+++ b/home.html
@@ -14,6 +14,11 @@
 <body>
   <header>
     <nav>
+      <!-- Hamburger button for mobile -->
+<div class="menu-toggle" id="menu-toggle">
+  <i class="fas fa-bars"></i>
+</div>
+
       <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
