script file add and linked

--- a/home.html
+++ b/home.html
@@ -102,5 +102,7 @@
     </div>
     <p class="copy">&copy; 2025 Pastel Shop. Made with ❤️</p>
   </footer>
+  <script src="script.js"></script>
+
 </body>
 </html>
