--- a/about.html
+++ b/about.html
@@ -58,5 +58,6 @@
     </div>
     <p>&copy; 2025 Pastel Boutique. All rights reserved.</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
