--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
     </div>
     <p>&copy; 2025 Pastel Boutique. All rights reserved.</p>
   </footer>
+<script src="script.js"></script>
 
 </body>
 </html>
