--- a/home.html
+++ b/home.html
@@ -14,10 +14,8 @@
 <body>
   <header>
     <nav>
-      <!-- Hamburger button for mobile -->
-<div class="menu-toggle" id="menu-toggle">
-  <i class="fas fa-bars"></i>
-</div>
+    <!-- Hamburger button (no external icon needed) -->
+  <button id="menu-toggle" class="menu-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
 
       <ul>
         <li><a href="home.html">Home</a></li>
