--- a/shop.html
+++ b/shop.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="images/favicon.png" />
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shop</title>
   <link rel="stylesheet" href="style.css" />
@@ -128,6 +129,17 @@
     </div>
     <p>&copy; 2025 Pastel Boutique. All rights reserved.</p>
   </footer>
+<!-- Toast container -->
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+  <div id="cartToast" class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="d-flex">
+      <div class="toast-body" id="toast-message">
+        ✅ Item added to cart!
+      </div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+  </div>
+</div>
 
 
 
@@ -157,8 +169,6 @@
     cartCount = cartItems.length;
     document.getElementById("cart-count").textContent = cartCount;
   };
-
-
 </script>
 <script src="script.js"></script>
 </body>
