--- a/cart.html
+++ b/cart.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <meta charset="UTF-8">
   <link rel="icon" type="image/png" href="images/favicon.png" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
   <title>Pastel Shop - Your Cart</title>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
@@ -20,6 +22,28 @@
     <a href="shop.html" class="back-btn">← Back to Shop</a>
   </div>
 
-  <script src="script.js"></script>
+<footer class="footer bg-light py-4">
+  <div class="container d-flex flex-wrap justify-content-between align-items-center">
+    <div class="footer-brand mb-3">
+      <h3>Pastel Boutique</h3>
+      <p class="mb-0">Soft accessories for every day</p>
+    </div>
+    <div class="footer-nav mb-3">
+      <a href="home.html" class="text-decoration-none mx-2">Home</a>
+      <a href="shop.html" class="text-decoration-none mx-2">Shop</a>
+      <a href="contact.html" class="text-decoration-none mx-2">Contact</a>
+      <a href="about.html" class="text-decoration-none mx-2">About</a>
+    </div>
+    <div class="footer-social mb-3">
+      <!-- Logo-only animation icons using Bootstrap Icons -->
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-envelope"></i></a>
+    </div>
+    <div class="footer-copy text-muted">© 2025 Pastel Boutique</div>
+  </div>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
