--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/png" href="images/favicon.png" />
-  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
   <title>Contact Us</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -30,19 +31,28 @@
     </div>
   </div>
 
-  <footer>
-    <div class="footer-section customer-service">
-      <h3>Customer Service</h3>
-      <ul>
-        <li><a href="#">FAQs</a></li>
-        <li><a href="#">Shipping & Delivery</a></li>
-        <li><a href="#">Returns & Exchanges</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms & Conditions</a></li>
-      </ul>
+
+<footer class="footer bg-light py-4">
+  <div class="container d-flex flex-wrap justify-content-between align-items-center">
+    <div class="footer-brand mb-3">
+      <h3>Pastel Boutique</h3>
+      <p class="mb-0">Soft accessories for every day</p>
     </div>
-    <p>&copy; 2025 Pastel Boutique. All rights reserved.</p>
-  </footer>
+    <div class="footer-nav mb-3">
+      <a href="home.html" class="text-decoration-none mx-2">Home</a>
+      <a href="shop.html" class="text-decoration-none mx-2">Shop</a>
+      <a href="contact.html" class="text-decoration-none mx-2">Contact</a>
+      <a href="about.html" class="text-decoration-none mx-2">About</a>
+    </div>
+    <div class="footer-social mb-3">
+      <!-- Logo-only animation icons using Bootstrap Icons -->
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-envelope"></i></a>
+    </div>
+    <div class="footer-copy text-muted">© 2025 Pastel Boutique</div>
+  </div>
+</footer>
 <script src="script.js"></script>
 
 </body>
