--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 </head>
 <body>
   <header>
@@ -66,40 +68,28 @@
     </div>
   </section>
 
-  <footer>
-    <div class="footer-container">
-      <div class="footer-section">
-        <h3>Customer Service</h3>
-        <ul>
-          <li><a href="#">FAQs</a></li>
-          <li><a href="#">Shipping & Delivery</a></li>
-          <li><a href="#">Returns & Exchanges</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms & Conditions</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-section">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-section">
-        <h3>Follow Us</h3>
-        <ul>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Pinterest</a></li>
-        </ul>
-      </div>
+<footer class="footer bg-light py-4">
+  <div class="container d-flex flex-wrap justify-content-between align-items-center">
+    <div class="footer-brand mb-3">
+      <h3>Pastel Boutique</h3>
+      <p class="mb-0">Soft accessories for every day</p>
     </div>
-    <p class="copy">&copy; 2025 Pastel Shop. Made with ❤️</p>
-  </footer>
+    <div class="footer-nav mb-3">
+      <a href="home.html" class="text-decoration-none mx-2">Home</a>
+      <a href="shop.html" class="text-decoration-none mx-2">Shop</a>
+      <a href="contact.html" class="text-decoration-none mx-2">Contact</a>
+      <a href="about.html" class="text-decoration-none mx-2">About</a>
+    </div>
+    <div class="footer-social mb-3">
+      <!-- Logo-only animation icons using Bootstrap Icons -->
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-envelope"></i></a>
+    </div>
+    <div class="footer-copy text-muted">© 2025 Pastel Boutique</div>
+  </div>
+</footer>
+  
   <script src="script.js"></script>
 
 </body>
