--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,8 @@
   <link rel="icon" type="image/png" href="images/favicon.png" />
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shop</title>
   <link rel="stylesheet" href="style.css" />
@@ -116,19 +118,28 @@
     </section>
   </main>
 
-  <footer>
-    <div class="footer-section customer-service">
-      <h3>Customer Service</h3>
-      <ul>
-        <li><a href="#">FAQs</a></li>
-        <li><a href="#">Shipping & Delivery</a></li>
-        <li><a href="#">Returns & Exchanges</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms & Conditions</a></li>
-      </ul>
+<footer class="footer bg-light py-4">
+  <div class="container d-flex flex-wrap justify-content-between align-items-center">
+    <div class="footer-brand mb-3">
+      <h3>Pastel Boutique</h3>
+      <p class="mb-0">Soft accessories for every day</p>
     </div>
-    <p>&copy; 2025 Pastel Boutique. All rights reserved.</p>
-  </footer>
+    <div class="footer-nav mb-3">
+      <a href="home.html" class="text-decoration-none mx-2">Home</a>
+      <a href="shop.html" class="text-decoration-none mx-2">Shop</a>
+      <a href="contact.html" class="text-decoration-none mx-2">Contact</a>
+      <a href="about.html" class="text-decoration-none mx-2">About</a>
+    </div>
+    <div class="footer-social mb-3">
+      <!-- Logo-only animation icons using Bootstrap Icons -->
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="text-decoration-none mx-2"><i class="bi bi-envelope"></i></a>
+    </div>
+    <div class="footer-copy text-muted">© 2025 Pastel Boutique</div>
+  </div>
+</footer>
+
 <!-- Toast container -->
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
   <div id="cartToast" class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
@@ -171,5 +182,6 @@
   };
 </script>
 <script src="script.js"></script>
+
 </body>
 </html>
